# distributed-closure

./: .gitmodules  .travis.yml  CHANGELOG.md  LICENSE.md  README.md  default.nix  distributed-closure.cabal  shell.nix  stack.yaml
.buildkite/: pipeline.yml
.circleci/: config.yml
examples/: ClientServer.hs
src/Control/Applicative/: Static.hs
src/Control/Comonad/: Static.hs
src/Control/Distributed/: Closure.hs  StaticPtr.hs
src/Control/Distributed/Closure/: Class.hs  Internal.hs  TH.hs
src/Control/Monad/: Static.hs
src/Data/: Appliance.hs
src/Data/Functor/: Static.hs
src/Data/Profunctor/: Static.hs
src/Data/Profunctor/Choice/: Static.hs
src/Data/Profunctor/Strong/: Static.hs
tests/: test.hs
